<resources>
    <string name="app_name">OAUNet</string>
    <string name="title_activity_main_list1">MainListActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">Intro text lorem ipsum and some other string that android studio and other ide auto generate for the code. Believe me they are so annoying thwt i want to cry and the funny part is that i need them now that is why im typing this long test like somebody that is jobles. what\'ll be painfull is if all this text that ive typed get deleted because i didnt save the so ill better copy them when im done thats smart. I just keep making typing errors sef nawa oh. lemme just end this</string>
    <string name="author_oau">Author: OAU</string>
    <string name="research">Research</string>
    <string name="events">Events</string>
    <string name="items">News</string>
    <string name="date_format">Date: %s</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="oaunet">OAUNet</string>
    <string name="oau_logo">oau logo</string>
    <string name="links">Links</string>
    <string name="e_portal">E-portal</string>
    <string name="netque">NetQue</string>
    <string name="transcript">Transcript</string>
    <string name="departments">Departments</string>
</resources>
